--- a/assets/css/sir.css
+++ b/assets/css/sir.css
@@ -2,6 +2,10 @@
 	margin-top: 23px;
 }
 
+.align_small_button_with_text_field_no_label{
+	margin-top: 23px;
+}
+
 .align_text_with_label_no_input{
 	margin-top: 8px;
 }
